--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="sign_up">Sign Up</string>
     <string name="profile_picture">profile picture</string>
     <string name="confirm_password">Confirm Password</string>
+    <string name="title_weather">Weather</string>
 </resources>
